feat: implement restaurant and menu management with ownership checks

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ coverage/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Temporary verification and seeding scripts
+verifystep*.js
+backend/scripts/
